--- a/frontend/index.html
+++ b/frontend/index.html
@@ -116,7 +116,9 @@
   </div>
 
   <script>
-    const baseURL = "http://localhost:8080"; // change to your backend URL
+    // const baseURL = "http://localhost:8080";
+    const baseURL = "https://movie-acw2.onrender.com";
+
     const formTitle = document.getElementById("form-title");
     const nameGroup = document.getElementById("name-group");
     const nameInput = document.getElementById("name");
